crates/wac-parser/tests/resolution/fail/expected-result-scalar.wac
package test:comp;

import x: interface {
    f: func() -> (x: u32, y: string);
};

let i = new foo:bar { x };
